--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Tue
 Jan 8
 </td>
 <td class="ltitle">
-Introductions, syllabus, thinking about probability
+<a href="0108.pdf" target="_blank">Introductions, course structure, syllabus</a></a>
 </td>
 </tr>
 <tr>
