added 'lab' section to each day, fixed due dates in table, added R code from lab today

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Peter McMahan (<a href="mailto:peter.mcmahan@mcgill.ca">peter.mcmahan@mcgill.ca<
 <strong>Project precis</strong>
 </td>
 <td>
-February 19
+March 14
 </td>
 <td>
 5% of final grade
@@ -105,7 +105,7 @@ February 19
 <strong>Project Proposal</strong>
 </td>
 <td>
-March 12
+March 28
 </td>
 <td>
 10% of final grade
@@ -116,7 +116,7 @@ March 12
 <strong>Project presentation</strong>
 </td>
 <td>
-February 19th
+April 9, 11
 </td>
 <td>
 10% of final grade
@@ -127,7 +127,7 @@ February 19th
 <strong>Project writeup</strong>
 </td>
 <td>
-February 19th
+April 18
 </td>
 <td>
 25% of final grade
@@ -161,6 +161,9 @@ Jan 8
 <td class="ltitle">
 <a href="0108.pdf" target="_blank">Introductions, course structure, syllabus</a></a>
 </td>
+<td class="llab">
+<a href="0108.R" target="_blank">Installing and testing software</a></a>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -171,6 +174,8 @@ Jan 10
 </td>
 <td class="ltitle">
 Probability models of social processes
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -204,6 +209,8 @@ Jan 15
 <td class="ltitle">
 Bayesian models, likelihoods, and posterior distributions
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -214,6 +221,8 @@ Jan 17
 </td>
 <td class="ltitle">
 Sampling from the posterior
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -253,6 +262,8 @@ Jan 22
 <td class="ltitle">
 Linear regressions from a Bayesian perspective
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -263,6 +274,8 @@ Jan 24
 </td>
 <td class="ltitle">
 Interpreting Bayesian coefficient estimates
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -302,6 +315,8 @@ Jan 29
 <td class="ltitle">
 Checking models and estimates
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -312,6 +327,8 @@ Jan 31
 </td>
 <td class="ltitle">
 Causation and interaction
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -351,6 +368,8 @@ Feb 5
 <td class="ltitle">
 Logistic regression: motivating latent-variable models
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -361,6 +380,8 @@ Feb 7
 </td>
 <td class="ltitle">
 Logistic regression: methods and interpretation
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -400,6 +421,8 @@ Feb 12
 <td class="ltitle">
 Counts and rates
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -410,6 +433,8 @@ Feb 14
 </td>
 <td class="ltitle">
 Poisson and negative binomial regressions
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -449,6 +474,8 @@ Feb 19
 <td class="ltitle">
 Multinomial regression
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -459,6 +486,8 @@ Feb 21
 </td>
 <td class="ltitle">
 Ordered multinomial regression
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -498,6 +527,8 @@ Feb 26
 <td class="ltitle">
 Nested data and interdependence
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -508,6 +539,8 @@ Feb 28
 </td>
 <td class="ltitle">
 Random intercept models
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -546,6 +579,8 @@ Break!
 <td class="ltitle">
 No class!
 </td>
+<td>
+</td>
 </tr>
 </table>
 </td>
@@ -572,6 +607,8 @@ Mar 12
 <td class="ltitle">
 Random slopes
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -582,6 +619,8 @@ Mar 14
 </td>
 <td class="ltitle">
 Interpreting and visualizing multilevel estimates
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -621,6 +660,8 @@ Mar 19
 <td class="ltitle">
 Multilevel GLM
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -631,6 +672,8 @@ Mar 21
 </td>
 <td class="ltitle">
 Covariance in random effects
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -658,6 +701,8 @@ Mar 26
 <td class="ltitle">
 Time series: nesting time within individuals
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -668,6 +713,8 @@ Mar 28
 </td>
 <td class="ltitle">
 Missing data
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -707,6 +754,8 @@ Apr 2
 <td class="ltitle">
 Three-level models
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -717,6 +766,8 @@ Apr 4
 </td>
 <td class="ltitle">
 Non-nested models
+</td>
+<td>
 </td>
 </tr>
 </table>
@@ -744,6 +795,8 @@ Apr 9
 <td class="ltitle">
 Final project presentations
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td class="lday">
@@ -754,6 +807,8 @@ Apr 11
 </td>
 <td class="ltitle">
 Final project presentations
+</td>
+<td>
 </td>
 </tr>
 </table>
