--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@ Thu
 Jan 10
 </td>
 <td class="ltitle">
-Probability models of social processes
+<a href="0110.pdf" target="_blank">Probability models of social processes</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0110.html" target="_blank">Approximating simple posteriors</a></a>
 </td>
 </tr>
 </table>
