--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Sampling from the posterior
 <strong>Due</strong>
 </p>
 <p>
-HW 1 (Thursday morning)
+<a href="assignments/01/01.html">HW 1 (Thursday morning)</a>
 </p>
 </td>
 </tr>
