adjusted due dates

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Peter McMahan (<a href="mailto:peter.mcmahan@mcgill.ca">peter.mcmahan@mcgill.ca<
 <strong>Project precis</strong>
 </td>
 <td>
-March 14
+March 15
 </td>
 <td>
 5% of final grade
@@ -105,7 +105,7 @@ March 14
 <strong>Project Proposal</strong>
 </td>
 <td>
-March 28
+March 29
 </td>
 <td>
 10% of final grade
@@ -243,7 +243,7 @@ Sampling from the posterior
 <strong>Due</strong>
 </p>
 <p>
-<a href="assignments/01/01.html" target="_blank">HW 1 (Thursday morning)</a>
+<a href="assignments/01/01.html" target="_blank">HW 1 <br> (Friday 5pm)</a>
 </p>
 </td>
 </tr>
@@ -296,7 +296,7 @@ Interpreting Bayesian coefficient estimates
 <strong>Due</strong>
 </p>
 <p>
-HW 2 (Thursday morning)
+HW 2 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -349,7 +349,7 @@ Causation and interaction
 <strong>Due</strong>
 </p>
 <p>
-HW 3 (Thursday morning)
+HW 3 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -402,7 +402,7 @@ Logistic regression: methods and interpretation
 <strong>Due</strong>
 </p>
 <p>
-HW 4 (Thursday morning)
+HW 4 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -455,7 +455,7 @@ Poisson and negative binomial regressions
 <strong>Due</strong>
 </p>
 <p>
-HW 5 (Thursday morning)
+HW 5 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -508,7 +508,7 @@ Ordered multinomial regression
 <strong>Due</strong>
 </p>
 <p>
-HW 6 (Thursday morning)
+HW 6 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -561,7 +561,7 @@ Random intercept models
 <strong>Due</strong>
 </p>
 <p>
-HW 7 (Thursday morning)
+HW 7 <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -641,7 +641,7 @@ Interpreting and visualizing multilevel estimates
 <strong>Due</strong>
 </p>
 <p>
-Final project precis (Thursday morning)
+Final project precis <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -735,7 +735,7 @@ Missing data
 <strong>Due</strong>
 </p>
 <p>
-Final project proposal (Thursday morning)
+Final project proposal <br> (Friday 5pm)
 </p>
 </td>
 </tr>
@@ -823,7 +823,7 @@ Final project presentations
 <strong>Due</strong>
 </p>
 <p>
-Final project (Thursday morning)
+Final project presentations
 </p>
 </td>
 </tr>
