--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@ Tue
 Jan 15
 </td>
 <td class="ltitle">
-Bayesian models, likelihoods, and posterior distributions
+<a href="0115.pdf" target="_blank">Probability distributions and random samples</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0115.html" target="_blank">Working with samples</a></a>
 </td>
 </tr>
 <tr>
