--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@ Thu
 Jan 17
 </td>
 <td class="ltitle">
-Sampling from the posterior
+<a href="0117.pdf" target="_blank">Multi-parameter posteriors</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0117.html" target="_blank">Using MAP</a></a>
 </td>
 </tr>
 </table>
