--- a/index.html
+++ b/index.html
@@ -263,9 +263,10 @@ Tue
 Jan 22
 </td>
 <td class="ltitle">
-Linear regressions from a Bayesian perspective
+<a href="0122.pdf" target="_blank">Linear regressions from a Bayesian perspective</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0122.html" target="_blank">Samples from a joint posterior</a></a>
 </td>
 </tr>
 <tr>
