link to assignment 2, changed du dates

--- a/index.html
+++ b/index.html
@@ -295,12 +295,6 @@ Interpreting Bayesian coefficient estimates
 <td class="optional">
 </td>
 <td class="due">
-<p>
-<strong>Due</strong>
-</p>
-<p>
-HW 2 <br> (Friday 5pm)
-</p>
 </td>
 </tr>
 <tr>
@@ -352,7 +346,7 @@ Causation and interaction
 <strong>Due</strong>
 </p>
 <p>
-HW 3 <br> (Friday 5pm)
+<a href="assignments/02/02.html" target="_blank">HW 2 <br> (Monday 5pm)</a>
 </p>
 </td>
 </tr>
@@ -405,7 +399,7 @@ Logistic regression: methods and interpretation
 <strong>Due</strong>
 </p>
 <p>
-HW 4 <br> (Friday 5pm)
+HW 3 <br> (Monday 5pm)
 </p>
 </td>
 </tr>
@@ -458,7 +452,7 @@ Poisson and negative binomial regressions
 <strong>Due</strong>
 </p>
 <p>
-HW 5 <br> (Friday 5pm)
+HW 4 <br> (Monday 5pm)
 </p>
 </td>
 </tr>
@@ -511,7 +505,7 @@ Ordered multinomial regression
 <strong>Due</strong>
 </p>
 <p>
-HW 6 <br> (Friday 5pm)
+HW 5 <br> (Monday 5pm)
 </p>
 </td>
 </tr>
@@ -564,7 +558,7 @@ Random intercept models
 <strong>Due</strong>
 </p>
 <p>
-HW 7 <br> (Friday 5pm)
+HW 6 <br> (Monday 5pm)
 </p>
 </td>
 </tr>
