--- a/index.html
+++ b/index.html
@@ -277,9 +277,10 @@ Thu
 Jan 24
 </td>
 <td class="ltitle">
-Interpreting Bayesian coefficient estimates
+<a href="0124.pdf" target="_blank">Covariates for causal analysis</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0124.html" target="_blank">Indicator variables and standardization</a></a>
 </td>
 </tr>
 </table>
