--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@ Tue
 Jan 29
 </td>
 <td class="ltitle">
-Checking models and estimates
+<a href="0129.pdf" target="_blank">Checking models and estimates</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0129.html" target="_blank">Posterior predictive plots</a></a>
 </td>
 </tr>
 <tr>
@@ -325,7 +326,7 @@ Thu
 Jan 31
 </td>
 <td class="ltitle">
-Causation and interaction
+Information criteria
 </td>
 <td>
 </td>
