--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Logistic regression: methods and interpretation
 <strong>Due</strong>
 </p>
 <p>
-HW 3 <br> (Monday 5pm)
+<a href="assignments/03/03.html" target="_blank">HW 3 <br> (Monday 5pm)</a>
 </p>
 </td>
 </tr>
