--- a/index.html
+++ b/index.html
@@ -326,9 +326,10 @@ Thu
 Jan 31
 </td>
 <td class="ltitle">
-Information criteria
+<a href="0131.pdf" target="_blank">Parsimony and overfitting</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0131.html" target="_blank">Calculating information criteria</a></a>
 </td>
 </tr>
 </table>
