--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Tue
 Feb 5
 </td>
 <td class="ltitle">
-Logistic regression: motivating latent-variable models
+<a href="0205.pdf" target="_blank">Logistic regression: motivation</a></a>
 </td>
 <td>
 </td>
