lab notes posted

--- a/index.html
+++ b/index.html
@@ -369,7 +369,8 @@ Feb 5
 <td class="ltitle">
 <a href="0205.pdf" target="_blank">Logistic regression: motivation</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0205.html" target="_blank">R Functions and no-intercept logistic regression</a></a>
 </td>
 </tr>
 <tr>
