--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Poisson and negative binomial regressions
 <strong>Due</strong>
 </p>
 <p>
-HW 4 <br> (Monday 5pm)
+<a href="assignments/04/04.html" target="_blank">HW 4 <br> (Monday 5pm)</a>
 </p>
 </td>
 </tr>
