--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@ Thu
 Feb 7
 </td>
 <td class="ltitle">
-Logistic regression: methods and interpretation
+<a href="0207.pdf" target="_blank">Logistic regression: methods and interpretation</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0207.html" target="_blank">Prior predictive simulation (logistic)</a></a>
 </td>
 </tr>
 </table>
