small wording change

--- a/assignments/04/04.html
+++ b/assignments/04/04.html
@@ -124,7 +124,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li><p><strong>Create a more complete model (<em>6 points</em>)</strong></p>
 <p>Explaining arrestee release using only race is informative, but not an especially complete model. Here you will build a more complete model to try to explain release.</p>
 <ol class="incremental" type="a">
-<li><p>Using the variables in the data set, formulate a different model of arrestee release. You can use any combination of the available variables (including interactions if you like), but the model should be a logistic regression. Specify this model using probability notation (like above), including all prior distributions.</p></li>
+<li><p>Using the variables in the data set, formulate a different model of arrestee release. You can use any combination of at least two of the available variables (including interactions if you like), but the model should be a logistic regression. Specify this model using probability notation (like above), including all prior distributions.</p></li>
 <li><p>Estimate this new model using <code>map()</code> or <code>map2stan()</code>. What are the point estimates and credible intervals for the model parameters. What do these results mean in terms of probability of release for different kinds of people? Be specific.</p></li>
 <li><p>Use WAIC to discuss whether this new model is preferable to the univariate model from question 2.</p></li>
 </ol></li>
