--- a/index.html
+++ b/index.html
@@ -422,9 +422,10 @@ Tue
 Feb 12
 </td>
 <td class="ltitle">
-Counts and rates
+<a href="0212.pdf" target="_blank">Counts and rates</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0212.html" target="_blank">Logistic regression in R</a></a>
 </td>
 </tr>
 <tr>
@@ -435,7 +436,7 @@ Thu
 Feb 14
 </td>
 <td class="ltitle">
-Poisson and negative binomial regressions
+Overdispersed Poisson
 </td>
 <td>
 </td>
