--- a/index.html
+++ b/index.html
@@ -436,9 +436,10 @@ Thu
 Feb 14
 </td>
 <td class="ltitle">
-Overdispersed Poisson
+<a href="0214.pdf" target="_blank">Expanding on Poisson regressions</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0214.html" target="_blank">Over-disperssed and zero-inflated Poisson</a></a>
 </td>
 </tr>
 </table>
