--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@ Ordered multinomial regression
 <strong>Due</strong>
 </p>
 <p>
-HW 5 <br> (Monday 5pm)
+<a href="assignments/05/05.html" target="_blank">HW 5 <br> (Wednesday 5pm)</a>
 </p>
 </td>
 </tr>
