added note about justifying priors

--- a/assignments/05/05.html
+++ b/assignments/05/05.html
@@ -85,6 +85,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </header>
 <p><em>Due Wed, Feb 20</em></p>
 <p>This assignment will use Add Health data to examine students’ decisions to skip class. The outcome variable of interest asks “how many times have you skipped school for a full day without an excuse [during this school year]?”</p>
+<p><em>General note: you do not need to go into as much detail justifying your priors for this assignment as you did for previous assignments. Unless your priors are significantly informative, simply describing them will be enough.</em></p>
 <ol class="incremental" start="0" type="1">
 <li><p><strong>Load the data.</strong></p>
 <p>The data is online, and can be loaded using</p>
