--- a/index.html
+++ b/index.html
@@ -477,9 +477,10 @@ Tue
 Feb 19
 </td>
 <td class="ltitle">
-Multinomial regression
+<a href="0219.pdf" target="_blank">Categorical outcomes</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0219.html" target="_blank">Multinomial regression</a></a>
 </td>
 </tr>
 <tr>
