--- a/index.html
+++ b/index.html
@@ -491,9 +491,10 @@ Thu
 Feb 21
 </td>
 <td class="ltitle">
-Ordered multinomial regression
+<a href="0221.pdf" target="_blank">Cumulative probability and ordinal outcomes</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0221.html" target="_blank">Ordered logistic regression</a></a>
 </td>
 </tr>
 </table>
