--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ Random intercept models
 <strong>Due</strong>
 </p>
 <p>
-HW 6 <br> (Monday 5pm)
+<a href="assignments/06/06.html" target="_blank">HW 6 <br> (Wednesday 5pm)</a>
 </p>
 </td>
 </tr>
