--- a/index.html
+++ b/index.html
@@ -532,9 +532,10 @@ Tue
 Feb 26
 </td>
 <td class="ltitle">
-Nested data and interdependence
+<a href="0226.pdf" target="_blank">Nested data and partia pooling</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0226.html" target="_blank">Indexing in model specification</a></a>
 </td>
 </tr>
 <tr>
