--- a/index.html
+++ b/index.html
@@ -546,9 +546,10 @@ Thu
 Feb 28
 </td>
 <td class="ltitle">
-Random intercept models
+<a href="0228.pdf" target="_blank">Random intercept models</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0228.html" target="_blank">Random intercepts in R</a></a>
 </td>
 </tr>
 </table>
