--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ Tue
 Mar 12
 </td>
 <td class="ltitle">
-Random slopes
+<a href="0312.pdf" target="_blank">Estimation methods; introduction to random slopes</a></a>
 </td>
 <td>
 </td>
@@ -627,7 +627,7 @@ Thu
 Mar 14
 </td>
 <td class="ltitle">
-Interpreting and visualizing multilevel estimates
+Covariance structure
 </td>
 <td>
 </td>
