--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ Tue
 Mar 12
 </td>
 <td class="ltitle">
-<a href="0312.pdf" target="_blank">Estimation methods; introduction to random slopes</a></a>
+<a href="0312.pdf" target="_blank">Estimation methods;<br> introduction to random slopes</a></a>
 </td>
 <td>
 </td>
@@ -627,7 +627,7 @@ Thu
 Mar 14
 </td>
 <td class="ltitle">
-Covariance structure
+Covariance of coefficients
 </td>
 <td>
 </td>
