--- a/index.html
+++ b/index.html
@@ -627,9 +627,10 @@ Thu
 Mar 14
 </td>
 <td class="ltitle">
-Covariance of coefficients
+<a href="0314.pdf" target="_blank">Covariance of coefficients</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0314.html" target="_blank">Specifying covariance priors in R</a></a>
 </td>
 </tr>
 </table>
