0319 (fix date later)

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ Tue
 Mar 19
 </td>
 <td class="ltitle">
-Multilevel GLM
+<a href="0318.pdf" target="_blank">Two-level models in detail</a></a>
 </td>
 <td>
 </td>
@@ -681,7 +681,7 @@ Thu
 Mar 21
 </td>
 <td class="ltitle">
-Covariance in random effects
+Multilevel GLM
 </td>
 <td>
 </td>
