--- a/index.html
+++ b/index.html
@@ -681,9 +681,10 @@ Thu
 Mar 21
 </td>
 <td class="ltitle">
-Multilevel GLM
+<a href="0321.pdf" target="_blank">Multilevel GLM and R formula specification</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0321.html" target="_blank">Building models with <code>brms</code></a></a>
 </td>
 </tr>
 </table>
