--- a/index.html
+++ b/index.html
@@ -710,9 +710,10 @@ Tue
 Mar 26
 </td>
 <td class="ltitle">
-Time series: nesting time within individuals
+<a href="0326.pdf" target="_blank">Time series: nesting time within individuals</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0326.html" target="_blank">Building models with <code>brms</code></a></a>
 </td>
 </tr>
 <tr>
