--- a/index.html
+++ b/index.html
@@ -724,9 +724,10 @@ Thu
 Mar 28
 </td>
 <td class="ltitle">
-Missing data
+<a href="0328.pdf" target="_blank">Time series: nesting time within individuals (continued)</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0328.html" target="_blank">Building temporal models with <code>brms</code></a></a>
 </td>
 </tr>
 </table>
