--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ Tue
 Apr 2
 </td>
 <td class="ltitle">
-Three-level models
+<a href="0402.pdf" target="_blank">Oversampling and missing data</a></a>
 </td>
 <td>
 </td>
@@ -778,7 +778,7 @@ Thu
 Apr 4
 </td>
 <td class="ltitle">
-Non-nested models
+Three-level and non-nested model
 </td>
 <td>
 </td>
