--- a/index.html
+++ b/index.html
@@ -767,7 +767,8 @@ Apr 2
 <td class="ltitle">
 <a href="0402.pdf" target="_blank">Oversampling and missing data</a></a>
 </td>
-<td>
+<td class="llab">
+<a href="0402.html" target="_blank">Examples in <code>brms</code></a></a>
 </td>
 </tr>
 <tr>
