--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ Thu
 Apr 4
 </td>
 <td class="ltitle">
-Three-level and non-nested model
+<a href="0404.pdf" target="_blank">Three-level and non-nested model</a></a>
 </td>
 <td>
 </td>
